syntax = "proto3";
package dydxprotocol.stats;

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/stats/types";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

// BlockStats is used to store stats transiently within the scope of a block.
message BlockStats {
  // Fill records data about a fill on this block.
  message Fill {
    // Taker wallet address
    string taker = 1;

    // Maker wallet address
    string maker = 2;

    // Notional USDC filled in quantums
    uint64 notional = 3;
  }

  // The fills that occured on this block.
  repeated Fill fills = 1;
}

// StatsMetadata stores metadata for the x/stats module
message StatsMetadata {
  // The oldest epoch that is included in the stats. The next epoch to be
  // removed from the window.
  uint32 trailing_epoch = 1;
}

// EpochStats stores stats for a particular epoch
message EpochStats {
  // A user and its associated stats
  message UserWithStats {
    string user = 1;
    UserStats stats = 2;
  }

  // Epoch end time
  google.protobuf.Timestamp epoch_end_time = 1
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];

  // Stats for each user in this epoch. Sorted by user.
  repeated UserWithStats stats = 2;
}

// GlobalStats stores global stats
message GlobalStats {
  // Notional USDC traded in quantums
  uint64 notional_traded = 1;
}

// UserStats stores stats for a User
message UserStats {
  // Taker USDC in quantums
  uint64 taker_notional = 1;

  // Maker USDC in quantums
  uint64 maker_notional = 2;
}
